src/test/ui/issues/issue-11844.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11844.rs:6:9
   |
LL |     match a {
   |           - this match expression has type `std::option::Option<std::boxed::Box<{integer}>>`
LL |         Ok(a) =>
   |         ^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<std::boxed::Box<{integer}>>`
              found type `std::result::Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
